// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for the "UISwitch" component renders correctly with description 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#c4c4c4",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 12,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#000000",
          "flex": 1,
          "fontSize": 15.75,
          "fontWeight": "400",
        }
      }
    >
      Some text here
    </Text>
    <Unknown
      thumbColor="#c4c4c4"
      trackColor={
        {
          "false": "#dcdee1",
          "true": "#7239f2",
        }
      }
      value={true}
    />
  </View>,
  <Text
    style={
      [
        [
          {
            "color": "#000000",
            "fontSize": 14,
            "fontWeight": "200",
          },
          {
            "marginTop": 8,
          },
        ],
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Some more text here
  </Text>,
]
`;

exports[`Snapshot test for the "UISwitch" component renders correctly without description 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#c4c4c4",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginTop": 12,
      "paddingBottom": 12,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 12,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#000000",
        "flex": 1,
        "fontSize": 15.75,
        "fontWeight": "400",
      }
    }
  >
    Some text here
  </Text>
  <Unknown
    thumbColor="#c4c4c4"
    trackColor={
      {
        "false": "#dcdee1",
        "true": "#7239f2",
      }
    }
    value={true}
  />
</View>
`;
